output box overflow fixed

--- a/broncode/poc/static/poc/css/component-output.css
+++ b/broncode/poc/static/poc/css/component-output.css
@@ -1,12 +1,6 @@
-/* Codemirror Output */
-.CodeMirror {
-    /* Set height, width, borders, and global font properties here */
-    font-family: monospace;
-    height: auto;
-    color: white !important;
-    direction: ltr;
-}
 
 #output-box {
+    font-family: monospace;
     padding: 0 2rem !important;
+	overflow: scroll;
 }
